--- a/src/components/popularSliders/PopularCard.module.css
+++ b/src/components/popularSliders/PopularCard.module.css
@@ -2,3 +2,20 @@
     display: flex;
     flex-direction: row;
 }
+
+.popular_section h2{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 40px;
+    font-weight: 600;
+    color: white;
+}
+
+.popular_section img{
+    height: 400px;
+    width: 600px;
+} 
+
+.popular_section li{
+    font-size: 20px;
+    color: white;
+}
