--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,12 +2,8 @@
 
 * {
   margin: 5px auto;
-  background-color: black;
+  /* background-color: black; */
   font-family: slick;
   font-weight: 400;
   font-style: normal;
-}
-
-.home-page {
-  color: white;
 }
