--- a/src/components/registration/SignUp.module.css
+++ b/src/components/registration/SignUp.module.css
@@ -1,3 +1,71 @@
-.registration_page{
-    /* background-color: white; */
+.registration_page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-items: center;
+  padding-top: 100px;
+  background-color: black;
+  width: 100vw;
+  height: 100vh;
+}
+
+.registration_card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  margin: 5px;
+  height: 500px;
+  width: 400px;
+  background-color: white;
+}
+
+.registration_heading{
+  font-family: inherit; 
+  font-size: 50px;
+  font-weight: 900;
+  font-style: italic;
+}
+.form_control {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: relative;
+  }
+
+.registration_input{
+  height: 30px;
+  width: 200px;
+  padding: 0 60px;
+  margin: 31px;
+  border-radius: 5px;
+}
+
+.registration_labels{
+  font-size: 14px;
+  position: absolute;
+  top: 19px;
+  left: 44px;
+  background-color: white;
+  padding: 0 11px;
+}
+
+
+.registration_btn{
+  display: flex;
+  justify-self: center;
+  padding: 5px 30px ;
+  font-size: 15px;
+  border-radius: 5px;
+  font-style: italic;
+  text-align: center;
+}
+
+.registration_para{
+  font-size: 15px;
+  font-weight: 300;
+  font-style: italic;
+  text-align: center;
+  margin: 15px;
 }
