--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,9 @@
 @import "https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap";
 
 * {
-  margin: 5px auto;
+  margin: 0px auto;
   /* background-color: black; */
-  font-family: slick;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
-  font-style: normal;
+  font-style: italic;
 }
