--- a/src/components/resetPassword/ResetPass.module.css
+++ b/src/components/resetPassword/ResetPass.module.css
@@ -1,4 +1,4 @@
-.login_page {
+.reset_page {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,10 +7,11 @@
     padding-top: 100px;
     background-color: black;
     width: 100vw;
+    overflow: hidden;
     height: 100vh;
   }
   
-  .login_card {
+  .reset_card {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,20 +22,20 @@
     background-color: white;
   }
   
-  .login_heading{
+  .reset_heading{
     font-family: inherit; 
     font-size: 50px;
     font-weight: 900;
     font-style: italic;
   }
-  .login_control {
+  .reset_control {
       display: flex;
       flex-direction: column;
       width: 100%;
       position: relative;
     }
   
-  .login_input{
+  .reset_input{
     height: 30px;
     width: 200px;
     padding: 0 60px;
@@ -42,7 +43,7 @@
     border-radius: 5px;
   }
   
-  .login_labels{
+  .reset_labels{
     font-size: 14px;
     position: absolute;
     top: 19px;
@@ -52,7 +53,7 @@
   }
   
   
-  .login_btn{
+  .reset_btn{
     display: flex;
     justify-self: center;
     padding: 5px 30px ;
@@ -62,7 +63,7 @@
     text-align: center;
   }
   
-  .login_para{   
+  .reset_para{   
     font-size: 15px;
     font-weight: 300;
     font-style: italic;
