--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -28,6 +28,11 @@ body{
     text-decoration: none;
 }
 
+.nav_item:hover{
+    transform: scale(1.1);
+    text-decoration-line: underline;
+}
+
 .search_bar{
     display: flex;
     flex-direction: unset;
