--- a/src/components/loginComponent/SignIn.module.css
+++ b/src/components/loginComponent/SignIn.module.css
@@ -6,8 +6,8 @@
     justify-items: center;
     padding-top: 100px;
     background-color: black;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 74vh;
   }
   
   .login_card {
