--- a/src/components/resetPassword/ResetPass.module.css
+++ b/src/components/resetPassword/ResetPass.module.css
@@ -6,9 +6,8 @@
     justify-items: center;
     padding-top: 100px;
     background-color: black;
-    width: 100vw;
-    overflow: hidden;
-    height: 100vh;
+    width: 100%;
+    height: 74vh;
   }
   
   .reset_card {
