--- a/src/components/popularSliders/PopularCard.module.css
+++ b/src/components/popularSliders/PopularCard.module.css
@@ -8,6 +8,7 @@
     font-size: 40px;
     font-weight: 600;
     color: white;
+    margin-top: 60px;
 }
 
 .popular_section img{
@@ -16,6 +17,6 @@
 } 
 
 .popular_section li{
-    font-size: 20px;
+    font-size: 15px;
     color: white;
 }
