--- a/src/components/trendingSlider/TrendingNow.module.css
+++ b/src/components/trendingSlider/TrendingNow.module.css
@@ -1,6 +1,7 @@
-.trending_section ul{
+.trending_card {
     display: flex;
     flex-direction: row;
+    
 }
 
 .trending_section h2{
@@ -8,6 +9,7 @@
     font-size: 40px;
     font-weight: 600;
     color: white;
+    margin-top: 60px;
 }
 
 .trending_section img{
@@ -16,6 +18,6 @@
 } 
 
 .trending_section li{
-    font-size: 20px;
+    font-size: 15px;
     color: white;
 }
