--- a/src/components/registration/SignUp.module.css
+++ b/src/components/registration/SignUp.module.css
@@ -11,9 +11,9 @@
 }
 
 .registration_card {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
   gap: 20px;
   margin: 5px;
   height: 500px;
@@ -22,7 +22,8 @@
 }
 
 .registration_heading{
-  font-family: inherit; 
+  font-family: inherit;
+  text-align: center;
   font-size: 40px;
   font-weight: 900;
   font-style: italic;
@@ -53,8 +54,7 @@
 
 
 .registration_btn{
-  display: flex;
-  justify-self: center;
+  margin-left: 150px;
   padding: 5px 30px ;
   font-size: 15px;
   border-radius: 5px;
