--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,8 @@
 @import "https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap";
 
 * {
-  margin: 0px auto;
-  /* background-color: black; */
+
+  /* width: 100%; */
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 400;
   font-style: italic;
