--- a/src/components/watchList/WatchList.module.css
+++ b/src/components/watchList/WatchList.module.css
@@ -7,5 +7,18 @@
 
 .watchlist_heading{
         color: white;
-        margin: 10px;
+        margin: 20px 200px;
+        font-size: 40px;
+        font-family: 'Times New Roman', Times, serif;
+}
+
+.watchlist_li{
+    color: white;
+}
+
+.watchlist_section{
+    display: flex;
+    flex-direction: row;
+    gap: 2px;
+    
 }
