--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,11 @@
-@import"https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap";
+/* @import"https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;500;700&display=swap"; */
 body{
     background-color: black
 }
-.logo{
-    padding: 0;
-    margin: 0 5px;
-}
+/* .logo{
+    width: 10px;
+    height: 10px;
+} */
 .navbar{
     display: flex;
     flex-direction: row;
@@ -17,9 +17,11 @@ body{
 
 .nav_list{
     display: flex;
+    flex-direction: row;
+    align-items: center;
     list-style: none;
     justify-content: space-between;
-    margin: 0 2px;
+    margin: 26px 0;
 }
 
 .nav_item{
@@ -47,52 +49,53 @@ body{
     color: white;
 }
 
-.search_button{
+/* .search_button{
     border: none;
-}
+} */
 
-.user_actions{
+/* .user_actions{
     justify-content: space-between;
     display: flex;
     flex-direction: row;
     align-items: center;
-}
+} */
 
 .Lang_btn{
     color: white;
-    margin: 0 10px;
+    margin: 0 2px;
+    border: 1px solid white;
     border-radius: 20px;
+    font-size: 20px;
     background-color: black;
+    
 }
 
 .plan_btn{
     background-color: #8230c6;
     text-align: center;
-    margin: 0 10px;
-    padding: 0 10px;
-    border-radius: 20px;
-    font-size: 15px;
-    font-weight: 500;
-    width: 130px;
-    height: 42px;
+    border-radius: 4px;
+    font-size: 12px;
+    font-weight: 800;
+    display: inline-block;
+    display: flex;
+    align-items: center;
+    padding: 9px 10px;
+    width: 100px;
+    border: 1px solid white;
 }
 
 .login_btn{
     color: white;
-    border-radius: 10px;
-    padding: 0px 10px;
+    border-radius: 4px;
     text-align: center;
-    margin: 0 10px;
     border: 1px solid white;
     width: 100px;
     height: 35px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: green;
 }
 
 .last_btn{
     color: white;
-    margin: 0 20px;
     border: none;
     font-size: 25px;
     padding: 20px;
