--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,12 +2,10 @@
 
 * {
 
-  /* width: 100%; */
+  /* width: 100%;   */
   ::-webkit-scrollbar {
     display: none;
   }
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-weight: 400;
-  font-style: italic;
+  font-family: NotoSansRegular,sans-serif;
   
 }
